RESOLVED FIXED245982
[WinCairo] PageUp and PageDown keys don't start the smooth keyboard scrolling
https://bugs.webkit.org/show_bug.cgi?id=245982
Summary [WinCairo] PageUp and PageDown keys don't start the smooth keyboard scrolling
Fujii Hironori
Reported 2022-10-03 14:49:37 PDT
[WinCairo] PageUp, PageDown, Home and End keys don't start keyboard scroll 255031@main (bug#228159) enabled EventHandlerDrivenSmoothKeyboardScrollingEnabled. It works nicely for Arrow keys, Space key and Shift+Space key, but for PageUp, PageDown, Home and End keys.
Attachments
WIP patch (2.34 KB, patch)
2022-10-03 21:51 PDT, Fujii Hironori
no flags
Patch (2.40 KB, patch)
2022-10-04 22:24 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-10-03 21:02:49 PDT
241197@main (bug#229733) fixed PageUp and PageDown for the smooth keyboard scrolling. But, 252663@main (bug#242523) removed the code. Mac port is using EditCommand (ScrollPageBackward and ScrollPageForward) for PageUp and PageDown now.
Fujii Hironori
Comment 2 2022-10-03 21:51:26 PDT
Created attachment 462779 [details] WIP patch
Fujii Hironori
Comment 3 2022-10-04 22:07:20 PDT
fast/dom/horizontal-scrollbar-in-rtl.html is failing for mac-wk2. I will split apart EditorCommand.cpp part into another patch.
Fujii Hironori
Comment 4 2022-10-04 22:24:37 PDT
Ross Kirsling
Comment 5 2022-10-05 00:22:58 PDT
Comment on attachment 462805 [details] Patch r=me
EWS
Comment 6 2022-10-05 02:57:00 PDT
Committed 255162@main (c00cdc0f009b): <https://commits.webkit.org/255162@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462805 [details].
Radar WebKit Bug Importer
Comment 7 2022-10-05 02:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.