[WinCairo] PageUp and PageDown keys don't start the smooth keyboard scrolling https://bugs.webkit.org/show_bug.cgi?id=245982

Reviewed by Ross Kirsling.

252663@main removed the code to start the smooth keyboard scrolling
for PageUp and PageDown keys in EventHandler. Mac port is executing
ScrollPageBackward and ScrollPageForward EditCommands for them. Do the
same for WinCairo.

For Home and End keys, Mac port is executing
ScrollToBeginningOfDocument and ScrollToEndOfDocument EditCommands.
This change does so for WinCairo too. However, the smooth keyboard
scrolling still doesn't work for WinCairo because 252663@main added
the smooth keyboard scrolling code only for ScrollPageBackward and
ScrollPageForward EditCommands but for ScrollToBeginningOfDocument and
ScrollToEndOfDocument EditCommands. A follow-up will fix the problem.

* Source/WebKit/WebProcess/WebPage/win/WebPageWin.cpp:
(WebKit::WebPage::performDefaultBehaviorForKeyEvent): Execute
EditCommands for Home, End, PageUp, PageDown keys.

Canonical link: https://commits.webkit.org/255162@main